# sma

./: .gitignore  README.md  diagram.excalidraw  settings.gradle
.run/: SmaControlApplication.run.xml  TwData.run.xml  TwStreamCollector.run.xml
backend/: .gitignore  Dockerfile  build.gradle.kts
backend/src/main/kotlin/com/github/ljufa/sma/backend/: main.kt
backend/src/main/kotlin/com/github/ljufa/sma/backend/api/: Handlers.kt  Models.kt  Routes.kt  SecurityConfig.kt
backend/src/main/resources/: application-test.yaml  application.yaml
backend/src/main/resources/db/migration/: V1_0_0__CreateTables.sql
backend/src/test/kotlin/com/github/ljufa/sma/backend/: ApiEndToEndTest.kt  ApiIntegrationTest.kt  PostgresIntegrationTest.kt
deployment/: .env  .gitignore  Makefile  docker-compose-server.yaml  docker-compose.yaml  post-receive-hook
tw-data/: .gitignore  Dockerfile  build.gradle
tw-data/src/main/proto/: api.proto  db.proto  service.proto
tw-data/src/main/resources/: application-test.yaml  application.yaml  logback.xml
tw-data/src/test/kotlin/com/github/ljufa/sma/tw/: SetupDataExtension.kt
tw-data/src/test/resources/: mock_kafka_data.json
tw-stream-collector/: .dockerignore  .gitignore  Dockerfile  build.gradle
tw-stream-collector/src/main/kotlin/com/github/ljufa/sma/stream/: Application.kt  config.kt  kafka.kt  twitter.kt
tw-stream-collector/src/main/resources/: application.yaml  logback.xml
web-ui/: .gitignore  Cargo.toml  Dockerfile  custom.js  index.html  style.css
web-ui/src/: lib.rs
(+22 files in other folders)
